more than whitespace fixes (bug 679017 and bug 679028)

--- a/media/css/impala/addon_details.less
+++ b/media/css/impala/addon_details.less
@@ -14,22 +14,6 @@
     h1 {
         padding-right: 54px;
     }
-    .install {
-        display: inline-block;
-        margin-right: 1em;
-    }
-    .extra {
-        margin-top: 8px;
-    }
-    .notavail {
-        font-family: @sans-stack;
-        font-size: 12px;
-        line-height: 12px;
-        padding: 1px 0 1px 18px;
-        margin-right: 14px;  /* Match the padding of .install. */
-        background: url(../../img/impala/no.png) 0 30% no-repeat;
-        white-space: nowrap;
-    }
     .badge {
         font-size: 14px;
         margin-right: 1em;
