--- a/media/css/impala/policy.less
+++ b/media/css/impala/policy.less
@@ -18,11 +18,3 @@ pre.license {
 p.policy-cancel {
     margin: 0;
 }
-
-p.policy-back a {
-    color: @dark-gray;
-}
-
-.prose .install-button {
-    display: inline-block;
-}
